<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_700"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                style="@style/edit_text_layout"
                android:hint="@string/full_names"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/edit_text_layout"
                android:hint="@string/email_address"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_telephone"
                style="@style/edit_text_layout"
                android:hint="@string/telephone"
                android:maxLength="10"
                android:maxLines="1"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pin"
                style="@style/edit_text_layout"
                android:hint="@string/pin"
                android:maxLength="4"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/pink"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>