<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_700">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#131627"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_personal_balance_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/wallet_balance"
        android:textColor="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_wallet_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ugx_2_000_000"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_personal_balance_heading" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_layout"
        style="@style/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/background_500"
        app:layout_constraintTop_toBottomOf="@+id/txt_wallet_balance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/teal_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/deposit"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_add" />

            <ImageView
                android:id="@+id/icon_wallet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/teal_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/withdraw"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_groups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_layout"/>
    <androidx.recyclerview.widget.RecyclerView
        constraintt
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_transaction"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_group"
        style="@style/outline_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_group"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>