<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_700">
    <View
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#121522"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telephone"
                style="@style/edit_text_layout"
                android:hint="@string/telephone"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin"
                style="@style/edit_text_layout"
                android:hint="@string/pin"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/pink" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_go_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/OutlinedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>